data/interfaces/default/css/tautulli.css
/* ... */
.selectize-input > div .item-text + .item-value {
    margin-left: 5px;
}
.selectize-input > div .item-value:before {
    content: '<';
    opacity: 0.8;
    font-size: 12px;
}
.selectize-input > div .item-value:after {
    content: '>';
    opacity: 0.8;
    font-size: 12px;
}
.selectize-dropdown .caption {
    font-size: 12px;
    display: block;
    color: #a0a0a0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.selectize-dropdown .select-all,
.selectize-dropdown .remove-all {
    font-weight: bold;
}
.selectize-dropdown .border-all {
    pointer-events: none;
    display: block;
    height: 1px;
    margin: 9px -12px 9px -12px;
    padding: 0 !important;
    overflow: hidden;
    background-color: #e5e5e5;
}
.selectize-dropdown .border-all:last-child {
    display: none;
}
.selectize-dropdown .optgroup-header {
    font-weight: bold;
}
.selectize-dropdown [data-selectable].option-disabled {
  color: #aaa;
  cursor: default;
}
select.form-control option {
    color: #555;
    background-color: #eee;
}
img {
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
}
object {
    pointer-events: none;
}
.navbar {
    background: #000;
    -webkit-box-shadow: 0 0 0 3px rgba(0,0,0,.2);
    -moz-box-shadow: 0 0 0 3px rgba(0,0,0,.2);
    box-shadow: 0 0 0 3px rgba(0,0,0,.2);
}
.navbar-brand {
    padding: 3px 3px;
}
.nav > li > a {
    color: #999;
    -webkit-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
.nav > li > a:hover,
.nav > li > a:focus {
    text-decoration: none;
    background-color: #282828;
    color: #eee;
}
.nav > li.active > a,
.nav > li.active > a:hover,
.nav > li.active > a:focus {
    color: #f9be03;
    background-color: #282828;
}
.navbar-toggle {
    background-color: #282828;
}
.navbar-toggle:hover,
.navbar-toggle:focus {
    background-color: #2f2f2f;
}
.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
    background-color: #2f2f2f;
    border-color: unset;
}
.dropdown-menu {
  background-color: #282828;
}
.dropdown-menu .divider {
  background-color: #777;
}
.dropdown-menu > li > a {
  color: #999;
}
.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
  color: #eee;
  background-color: #2f2f2f;
}
.dropdown-menu > .active > a,
.dropdown-menu > .active > a:hover,
.dropdown-menu > .active > a:focus {
  color: #eee;
  background-color: #2f2f2f;
}
.dropdown-menu > .disabled > a,
.dropdown-menu > .disabled > a:hover,
.dropdown-menu > .disabled > a:focus {
  color: #999;
}
.icon-bar {
    background-color: #999;
}
.padded-header {
    margin: 25px 0 25px 0;
}
.padded-header h1,h2,h3,h4,h5,h6 {
    color: #eee;
}
.padded-header h3 {
    font-size: 16px;
    font-weight: bold;
    text-transform: uppercase;
}
.padded-header h3 small {
    font-size: 13px;
    text-transform: none;
}
.btn {
    outline:0px !important;
}
.btn:not(select) {
    -webkit-appearance:none;
}
.btn-dark {
    color: #d7d7d7;
    background-color: #3B3B3B;
    border-color: transparent;
}
.btn-dark:focus,
.btn-dark.focus {
  color: #d7d7d7;
  background-color: #3B3B3B;
}
.btn-dark:hover {
  color: #eee;
  background-color: #333;
  border-color: #444;
}
.btn-dark:active,
.btn-dark.active,
.open > .dropdown-toggle.btn-dark {
  color: #eee;
  background-color: #333;
  border-color: #444;
}
.btn-dark:active:hover,
.btn-dark.active:hover,
.open > .dropdown-toggle.btn-dark:hover,
.btn-dark:active:focus,
.btn-dark.active:focus,
.open > .dropdown-toggle.btn-dark:focus,
.btn-dark:active.focus,
.btn-dark.active.focus,
.open > .dropdown-toggle.btn-dark.focus {
  color: #eee;
  background-color: #333;
}
.btn-dark:active,
.btn-dark.active,
.open > .dropdown-toggle.btn-dark {
  background-image: none;
}
.btn-dark.disabled,
.btn-dark[disabled],
fieldset[disabled] .btn-dark,
.btn-dark.disabled:hover,
.btn-dark[disabled]:hover,
fieldset[disabled] .btn-dark:hover,
.btn-dark.disabled:focus,
.btn-dark[disabled]:focus,
fieldset[disabled] .btn-dark:focus,
.btn-dark.disabled.focus,
.btn-dark[disabled].focus,
fieldset[disabled] .btn-dark.focus,
.btn-dark.disabled:active,
.btn-dark[disabled]:active,
fieldset[disabled] .btn-dark:active,
.btn-dark.disabled.active,
.btn-dark[disabled].active,
fieldset[disabled] .btn-dark.active {
  background-color: #333;
  color: #aaa;
}
.btn-dark.inactive:hover {
    color: #d7d7d7;
    background-color: #3B3B3B;
    border-color: transparent;
    cursor: default;
}
.btn-dark .badge {
  color: #e5e5e5;
  background-color: #3B3B3B;
}
.btn-bright {
  color: #eee;
  background-color: #cc7b19;
  box-shadow: inset 0 1px 0 #e7993b;
}
.btn-bright:focus,
.btn-bright.focus {
  color: #eee;
  background-color: #eb8600;
}
.btn-bright:hover {
  color: #eee;
  background-color: #e59029;
  box-shadow: inset 0 1px 0 #ebac60;
}
.btn-bright:active,
.btn-bright.active,
.open > .dropdown-toggle.btn-bright {
  color: #eee;
  background-color: #cc7b19;
  box-shadow: inset 0 1px 0 #e7993b;
}
.btn-bright:active:hover,
.btn-bright.active:hover,
.open > .dropdown-toggle.btn-bright:hover,
.btn-bright:active:focus,
.btn-bright.active:focus,
.open > .dropdown-toggle.btn-bright:focus,
.btn-bright:active.focus,
.btn-bright.active.focus,
.open > .dropdown-toggle.btn-bright.focus {
  color: #eee;
  background-color: #cc7b19;
  box-shadow: inset 0 1px 0 #e7993b;
}
.btn-bright:active,
.btn-bright.active,
.open > .dropdown-toggle.btn-bright {
  background-image: none;
}
/* ... */

